cmake_minimum_required(VERSION 3.13)
project(rpmalloc_project C)

# THIS FILE IS JUST FOR COMPILATION!
# IT IS MEANT TO BE INCLUDED AS PART OF YOUR CMAKE SOURCE TREE!

# Fix for rpmalloc in UNIX
if (UNIX)
  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -D_GNU_SOURCE")
endif()

# In Debug and RelWithDebInfo, enable statistics
#set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -DENABLE_STATISTICS=1 -DENABLE_ASSERTS=1")
set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -DENABLE_ASSERTS=1")
#set(CMAKE_C_FLAGS_RELWITHDEBINFO "${CMAKE_C_FLAGS_RELWITHDEBINFO} -DENABLE_STATISTICS=1 -DENABLE_ASSERTS=1")
set(CMAKE_C_FLAGS_RELWITHDEBINFO "${CMAKE_C_FLAGS_RELWITHDEBINFO} -DENABLE_ASSERTS=1")

add_library(rpmalloc STATIC rpmalloc/rpmalloc.c)
target_include_directories(rpmalloc PUBLIC rpmalloc)
